--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ files:
     overwrite: yes
 
 permissions:
-  - object: /dist/
+  - object: /
     pattern: "**"
     owner: ubuntu
     group: ubuntu
