--- a/appspec.yml
+++ b/appspec.yml
@@ -14,10 +14,10 @@ permissions:
     mode: 755
 
 hooks:
-  AfterInstall:
-    - location: scripts/build.sh
-      timeout: 300
-      runas: ubuntu
+  # AfterInstall:
+  #   - location: scripts/build.sh
+  #     timeout: 300
+  #     runas: ubuntu
 
   ApplicationStart:
     - location: scripts/start.sh
