--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.8",
+    "aws-sdk": "^2.1420.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -24,11 +25,13 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
-    "passport-naver-v2": "^2.0.8"
+    "passport-naver-v2": "^2.0.8",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -36,6 +39,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-kakao": "^1.0.0",
