--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "passport-naver-v2": "^2.0.8",
-    "sharp": "^0.32.4"
+    "sharp": "^0.32.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -43,6 +44,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-kakao": "^1.0.0",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint-config-airbnb-base": "^15.0.0",
