--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.377.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.8",
-    "aws-sdk": "^2.1420.0",
+    "aws-sdk": "^2.1422.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
