--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.377.0",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/file-type": "^10.9.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.8",
     "aws-sdk": "^2.1422.0",
     "bcryptjs": "^2.4.3",
+    "buffer-type": "^1.0.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.0",
+    "file-type": "^18.5.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
@@ -33,6 +38,7 @@
     "passport-kakao": "^1.0.1",
     "passport-naver-v2": "^2.0.8",
     "sharp": "^0.32.4",
+    "stream": "^0.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
