--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.8",
     "aws-sdk": "^2.1422.0",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "buffer-type": "^1.0.0",
     "cookie-session": "^2.0.0",
